<resources>
    <string name="app_name">Otp Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_email_to_get_otp">Enter Your Email To Get Otp</string>
    <string name="get_otp">Get Otp</string>
    <string name="get_Otp">Get OTP</string>
    <string name="please_enter_the_otp_received_at">Please Enter The OTP Received At\n</string>
    <string name="enter_email">Enter Email</string>
    <string name="Verify">VERIFY</string>
    <string name="entered_email">Entered Email</string>
    <string name="enter_your_password">Enter Your Email</string>
    <string name="save">SAVE</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="oops_sorry">OOPS SORRY\nTRY AGAIN!</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="save_password">Save Password</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="login">Login</string>
    <string name="OTP">OTP</string>
    <string name="Password">"Password "</string>
</resources>