<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdFragment">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_password"
    android:textSize="@dimen/sp_30"
    android:textStyle="bold"
    android:layout_gravity="center" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:id="@+id/etEnterPassword"
        android:inputType="textWebPassword"
        android:textSize="@dimen/sp_20"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sp_20"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        android:backgroundTint="#46FB4D"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sp_30"
        android:id="@+id/btnForgot_password"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        android:id="@+id/btnSave"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sp_30"
        android:backgroundTint="#46FB4D"/>
</LinearLayout>