<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_the_otp_received_at"
        android:textAlignment="center"
        android:textSize="@dimen/sp_40"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entered_email"
        android:textStyle="bold"
        android:id="@+id/etEnteredEmail"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:id="@+id/et1"
        android:digits="0123456789"
        android:inputType="number"
        android:padding="@dimen/dp_20"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:id="@+id/et2"
        android:digits="0123456789"
        android:inputType="number"
        android:padding="@dimen/dp_20"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:id="@+id/et3"
        android:digits="0123456789"
        android:inputType="number"
        android:padding="@dimen/dp_20"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:id="@+id/et4"
        android:digits="0123456789"
        android:inputType="number"
        android:padding="@dimen/dp_20"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Verify"
        android:id="@+id/btnVerify"
        android:layout_marginTop="@dimen/sp_20"
        android:layout_gravity="center"
        android:textStyle="bold"
        />
</LinearLayout>